# Atividade-aeds2

./: CMakeLists.txt  Funcionarios.c  Funcionarios.h  main.c
busca/: Busca.h  buscaBinaria.c  buscaSequencial.c
data/: Funcionarios.c  Funcionarios.h
hash/: Hash.h  tabelaHash.c
ordenacao/: Ordenacao.h  arvoreBinariaVenc.c  insertionSort.c  keySort.c
selecao/: Selecao.h  selecaoNatural.c
